set03/problem06_compile_errors.txt
Compilation started at 10/30/2023, 8:34:19 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'main':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:8:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(a,b);
     ^~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'input_string':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:17:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("Enter the string:");
     ^~~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:17:5: warning: incompatible implicit declaration of built-in function 'printf'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:17:5: note: include '<stdio.h>' or provide a declaration of 'printf'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:18:5: warning: implicit declaration of function 'scanf' [-Wimplicit-function-declaration]
     scanf("%s",a);
     ^~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:18:5: warning: incompatible implicit declaration of built-in function 'scanf'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:18:5: note: include '<stdio.h>' or provide a declaration of 'scanf'
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'sub_str_index':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:27:21: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
         if(string[i]=substring)
                     ^
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'output':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:36:5: warning: incompatible implicit declaration of built-in function 'printf'
     printf("The index of %s is %d in %s",substring,index,string);
     ^~~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:36:5: note: include '<stdio.h>' or provide a declaration of 'printf'
C:\Users\AP\AppData\Local\Temp\ccom27Ch.o: In function `main':
c:/Users/AP/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12/set03/problem06.c:8: undefined reference to `input'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/30/2023, 8:34:19 PM
Compilation started at 10/30/2023, 8:34:56 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'main':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:9:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(a,b);
     ^~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'sub_str_index':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:28:21: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
         if(string[i]=substring)
                     ^
C:\Users\AP\AppData\Local\Temp\ccCwarxG.o: In function `main':
c:/Users/AP/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12/set03/problem06.c:9: undefined reference to `input'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/30/2023, 8:34:56 PM
Compilation started at 10/30/2023, 8:35:50 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'main':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:9:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(a,b);
     ^~~~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'sub_str_index':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:28:21: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
         if(string[i]=substring)
                     ^
C:\Users\AP\AppData\Local\Temp\ccyw0tJO.o: In function `main':
c:/Users/AP/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12/set03/problem06.c:9: undefined reference to `input'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/30/2023, 8:35:50 PM
Compilation started at 10/30/2023, 8:36:04 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'main':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:9:5: warning: implicit declaration of function 'input' [-Wimplicit-function-declaration]
     input(a,b);
     ^~~~~
C:\Users\AP\AppData\Local\Temp\ccOwLnMA.o: In function `main':
c:/Users/AP/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12/set03/problem06.c:9: undefined reference to `input'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/30/2023, 8:36:04 PM
Compilation started at 10/30/2023, 8:36:18 PM
Compilation finished at 10/30/2023, 8:36:19 PM
Compilation started at 10/30/2023, 8:39:30 PM
Compilation finished at 10/30/2023, 8:39:31 PM
Compilation started at 10/30/2023, 9:00:13 PM
Compilation finished at 10/30/2023, 9:00:13 PM
Compilation started at 10/30/2023, 9:04:28 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c: In function 'output':
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set03\problem06.c:46:54: error: request for member 'substring' in something not a structure or union
     printf("%s found at index %d in the string %s \n".substring,index,string);
                                                      ^
Compilation finished at 10/30/2023, 9:04:28 PM
Compilation started at 10/30/2023, 9:04:57 PM
Compilation finished at 10/30/2023, 9:04:57 PM
Compilation started at 10/30/2023, 9:24:26 PM
Compilation finished at 10/30/2023, 9:24:26 PM
Compilation started at 10/30/2023, 9:26:35 PM
Compilation finished at 10/30/2023, 9:26:35 PM
Compilation started at 10/30/2023, 9:30:39 PM
Compilation finished at 10/30/2023, 9:30:39 PM
Compilation started at 10/30/2023, 9:39:37 PM
Compilation finished at 10/30/2023, 9:39:37 PM
Compilation started at 10/30/2023, 9:50:30 PM
Compilation finished at 10/30/2023, 9:50:30 PM
Compilation started at 10/30/2023, 9:57:37 PM
Compilation finished at 10/30/2023, 9:57:37 PM
Compilation started at 10/30/2023, 9:57:46 PM
Compilation finished at 10/30/2023, 9:57:46 PM
Compilation started at 10/30/2023, 9:58:03 PM
Compilation finished at 10/30/2023, 9:58:04 PM
Compilation started at 10/30/2023, 9:58:29 PM
Compilation finished at 10/30/2023, 9:58:29 PM
